rolex limited stock is live

--- a/index.html
+++ b/index.html
@@ -398,8 +398,8 @@
                                     <img src="assets/img/testimonial3.jpg" alt="" class="testimonial__perfil-img">
         
                                     <div class="testimonial__perfil-data">
-                                        <span class="testimonial__perfil-name">Raul Zaman</span>
-                                        <span class="testimonial__perfil-detail">Director of a company</span>
+                                        <span class="testimonial__perfil-name">CyFun</span>
+                                        <span class="testimonial__perfil-detail">Security Researcher</span>
                                     </div>
                                 </div>
                             </div>
