--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@
                                     <img src="assets/img/testimonial2.jpg" alt="" class="testimonial__perfil-img">
         
                                     <div class="testimonial__perfil-data">
-                                        <span class="testimonial__perfil-name">Samantha Mey</span>
-                                        <span class="testimonial__perfil-detail">Director of a company</span>
+                                        <span class="testimonial__perfil-name">Hitesh Mehta</span>
+                                        <span class="testimonial__perfil-detail">Manager of a company</span>
                                     </div>
                                 </div>
                             </div>
