--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
- <!DOCTYPE html>
+  <!DOCTYPE html>
     <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!--=============== FAVICON ===============-->
+        <!--to include favicoms here-->
         <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
-        <!--=============== BOXICONS ===============-->
+        <!--to include boxicons here-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
-        <!--=============== SWIPER CSS ===============--> 
+        <!--for swiper css and transitions--> 
         <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
-        <!--=============== CSS ===============-->
+        <!--for css-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <title>Responsive watches website - 4nish</title>
     </head>
     <body>
-        <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
@@ -48,7 +47,7 @@
                 </div>
 
                 <div class="nav__btns">
-                    <!-- Theme change button -->
+                    <!-- Button to change the theme-->
                     <i class='bx bx-moon change-theme' id="theme-button"></i>
 
                     <div class="nav__shop" id="cart-shop">
@@ -62,7 +61,7 @@
             </nav>
         </header>
 
-        <!--==================== CART ====================-->
+        <!--Cart-->
         <div class="cart" id="cart">
             <i class='bx bx-x cart__close' id="cart-close"></i>
 
@@ -157,9 +156,9 @@
             </div>
         </div>
 
-        <!--==================== MAIN ====================-->
+        <!--Main department-->
         <main class="main">
-            <!--==================== HOME ====================-->
+            <!--Home-->
             <section class="home" id="home">
                 <div class="home__container container grid">
                     <div class="home__img-bg">
@@ -179,9 +178,9 @@
                     </div>
     
                     <div class="home__data">
-                        <h1 class="home__title">NEW WATCH <br> COLLECTIONS B720</h1>
+                        <h1 class="home__title">NEW WATCH <br> COLLECTIONS GOLD SERIES</h1>
                         <p class="home__description">
-                            Latest arrival of the new imported watches of the B720 series, 
+                            Latest arrival of the new imported watches of the Gold series, 
                             with a modern and resistant design.
                         </p>
                         <span class="home__price">$1245</span>
@@ -197,7 +196,7 @@
                 </div>
             </section>
 
-            <!--==================== FEATURED ====================-->
+            <!-- FEATURED-->
             <section class="featured section container" id="featured">
                 <h2 class="section__title">
                     Featured
@@ -245,7 +244,7 @@
                 </div>
             </section>
 
-            <!--==================== STORY ====================-->
+            <!--STORY -->
             <section class="story section container">
                 <div class="story__container grid">
                     <div class="story__data">
@@ -272,7 +271,7 @@
                 </div>
             </section>
 
-            <!--==================== PRODUCTS ====================-->
+            <!--PRODUCTS-->
             <section class="products section container" id="products">
                 <h2 class="section__title">
                     Products
@@ -336,7 +335,7 @@
                 </div>
             </section>
 
-            <!--==================== TESTIMONIAL ====================-->
+            <!--TESTIMONIAL-->
             <section class="testimonial section container">
                 <div class="testimonial__container grid">
                     <div class="swiper testimonial-swiper">
@@ -420,7 +419,7 @@
                 </div>
             </section>
 
-            <!--==================== NEW ====================-->
+            <!--NEW-->
             <section class="new section container" id="new">
                 <h2 class="section__title">
                     New Arrivals
@@ -485,7 +484,7 @@
                 </div>
             </section>
 
-            <!--==================== NEWSLETTER ====================-->
+            <!--NEWSLETTER -->
             <section class="newsletter section container">
                 <div class="newsletter__bg grid">
                     <div>
@@ -507,7 +506,7 @@
             </section>
         </main>
 
-        <!--==================== FOOTER ====================-->
+        <!--FOOTER-->
         <footer class="footer section">
             <div class="footer__container container grid">
                 <div class="footer__content">
@@ -579,15 +578,15 @@
             <span class="footer__copy">&#169; 4nish. All rigths reserved</span>
         </footer>
 
-        <!--=============== SCROLL UP ===============-->
+        <!--SCROLL UP -->
         <a href="#" class="scrollup" id="scroll-up"> 
             <i class='bx bx-up-arrow-alt scrollup__icon' ></i>
         </a>
 
-        <!--=============== SWIPER JS ===============-->
+        <!--SWIPER JS-->
         <script src="assets/js/swiper-bundle.min.js"></script>
 
-        <!--=============== MAIN JS ===============-->
+        <!-- MAIN JS -->
         <script src="assets/js/main.js"></script>
     </body>
 </html>
